syntax = "proto2";

import "google/protobuf/timestamp.proto";

message WorkoutFilterProto {
  enum FilterType {
    startDate = 1;
    endDate = 2;
    startTime = 3;
    endTime = 4;
  }
  optional google.protobuf.Timestamp startDateTimestamp = 1;
  optional google.protobuf.Timestamp endDateTimestamp = 2;
  optional google.protobuf.Timestamp startTimeTimestamp = 3;
  optional google.protobuf.Timestamp endTimeTimestamp = 4;
}
